# miniviseo_v2

./: .env.example  .gitignore  README.md  app.py  main.py  mcp_servers.json.example  pyproject.toml
src/: server.py
src/agent/: __init__.py  core.py  executor.py  planner.py  synthesizer.py
src/memory/: __init__.py  persistent.py  session.py  storage.py
src/prompts/: __init__.py  system.py  templates.py
src/tools/: __init__.py  mcp_client.py  router.py  web_search.py
src/utils/: __init__.py  config.py  logger.py  openai_client.py  parser.py
static/: index.html
tests/: test_mcp_client.py
